--- a/index.html
+++ b/index.html
@@ -71,23 +71,31 @@
       </div>
   </div>
 <div id="braindump" class="page">
-    <div class="header">
-        <div class="header-left">
+<div class="header" style="flex-direction: column; align-items: stretch; height: auto; min-height: 80px; gap: 10px;">
+    <div class="status-indicator" style="display: flex; align-items: center; gap: 8px;">
+        <span class="blink-dot"></span>
+        <span style="font-size: 10px; letter-spacing: 2px; color: var(--accent); font-weight: 700;">NEURAL_SYNC // ACTIVE</span>
+    </div>
+
+    <div style="display: flex; justify-content: space-between; align-items: center; position: relative;">
+        <div style="display: flex; align-items: center; gap: 12px; flex: 1;">
             <i data-lucide="brain" class="brain-icon" onclick="toggleSidebar()"></i>
-            <div class="title-zone">
-                <h1 id="dump-title">BRAIN_DUMP</h1>
+            
+            <div class="title-zone" style="position: relative; flex: 1; display: flex; align-items: center;">
+                <h1 id="dump-title" style="margin: 0;">BRAIN_DUMP</h1>
+                
                 <div id="search-wrapper" class="search-wrapper">
-                    <input type="text" id="search-input" placeholder="SEARCH_NEURAL_RECORDS..." oninput="handleSearch()" onblur="toggleSearch(false)">
+                    <input type="text" id="search-input" placeholder="SEARCH_RECORDS..." oninput="handleSearch()" onblur="toggleSearch(false)">
                 </div>
             </div>
         </div>
 
-        <div class="header-right">
+        <div class="header-right" style="margin-top: 0;">
             <i data-lucide="search" id="search-trigger" class="search-icon" onclick="toggleSearch(true)"></i>
             <div class="esc-btn" onclick="nav('home')">[esc X]</div>
         </div>
     </div>
-
+</div>
     <main>
         <input type="text" id="dump-input" placeholder="Prendi una nota..." onkeypress="sendCmd(event)">
         <div id="keep-grid"></div>
