--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                 <h1 id="dump-title" style="margin: 0;">BRAIN_DUMP</h1>
                 
                 <div id="search-wrapper" class="search-wrapper">
-                    <input type="text" id="search-input" placeholder="SEARCH_RECORDS..." oninput="handleSearch()" onblur="toggleSearch(false)">
+                    <input type="text" id="search-input" placeholder="Cerca nota..." oninput="handleSearch()" onblur="toggleSearch(false)">
                 </div>
             </div>
         </div>
