--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
             </div>
 
         <div style="margin-top:40px; border-top: 1px solid #222; pt-20">
-            <div style="display: flex; items-center; gap: 8px; color: #555; margin: 20px 0 10px 0;">
+            <div style="display: flex; gap: 8px; color: #555; margin: 20px 0 10px 0;">
                 <span class="w-2 h-2 bg-[#00f3ff] rounded-full shadow-[0_0_8px_#00f3ff]"></span>
                 <span style="font-[Rajdhani]; font-size: 10px; letter-spacing: 2px;">HARD_CALENDAR_SCAN</span>
             </div>
