--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
       </div>
   </div>
 <div id="braindump" class="page">
-    <div class="header" style="flex-direction: column; align-items: stretch; height: auto; min-height: 80px; gap: 10px;">
+    <div class="header" style="flex-direction: column; align-items: stretch; height: auto; min-height: 80px;">
         <div class="status-indicator" style="display: flex; align-items: center; gap: 8px;">
             <span class="blink-dot"></span>
             <span style="font-size: 10px; letter-spacing: 2px; color: var(--accent); font-weight: 700;">NEURAL_SYNC // ACTIVE</span>
