--- a/index.html
+++ b/index.html
@@ -68,10 +68,30 @@
               <div class="label">Plan</div>
               <div class="value" id="widget-tasks">NO EVENTS</div>
           </div>
+
+            <div class="widget finance-widget" onclick="nav('finance')" style="grid-column: span 2; border-color: #00d4ff;">
+                <div style="display: flex; justify-content: space-between; align-items: center; width: 100%;">
+                    <div style="display: flex; align-items: center; gap: 15px;">
+                        <i data-lucide="wallet" style="color: #00d4ff;"></i>
+                        <div style="text-align: left;">
+                            <div class="label" style="color: #00d4ff;">ECON_SYNC</div>
+                            <div class="value"><span id="widget-spent">0.00</span> € <span
+                                    style="font-size: 10px; color: var(--dim);">SPENT_MONTH</span></div>
+                        </div>
+                    </div>
+                    <div style="text-align: right;">
+                        <div class="label" style="opacity: 0.6;">CASH_HAND</div>
+                        <div style="color: #fff; font-family: 'JetBrains Mono'; font-size: 1.2rem;"><span id="widget-cash">--</span>
+                            €</div>
+                    </div>
+                </div>
+            </div>
+
+
       </div>
   </div>
 <div id="braindump" class="page">
-    <div class="header" style="flex-direction: column; align-items: stretch; height: auto; min-height: 80px;">
+    <div class="header" style="flex-direction: column; align-items: stretch; height: auto; min-height: 80px; gap: 10px;">
         <div class="status-indicator" style="display: flex; align-items: center; gap: 8px;">
             <span class="blink-dot"></span>
             <span style="font-size: 10px; letter-spacing: 2px; color: var(--accent); font-weight: 700;">NEURAL_SYNC // ACTIVE</span>
@@ -175,6 +195,7 @@
     </main>
 </div>
 
+
 <div id="habit" class="page">
     <div class="header">
         <div class="header-left">
@@ -223,6 +244,42 @@
             </div>
         </div>
     </div>
+
+
+<div id="finance" class="page">
+    <div class="header" style="flex-direction: column; align-items: stretch; height: auto; gap: 5px;">
+        <div class="status-indicator">
+            <span class="blink-dot" style="background-color: #00d4ff; box-shadow: 0 0 8px #00d4ff;"></span>
+            <span style="font-size: 10px; letter-spacing: 2px; color: #00d4ff; font-weight: 700;">FINANCIAL_CORE // ENCRYPTED</span>
+        </div>
+        <div style="display: flex; justify-content: space-between; align-items: center;">
+            <div style="display: flex; align-items: center; gap: 12px;">
+                <i data-lucide="wallet" style="color: #00d4ff; width: 28px; height: 28px;"></i>
+                <h1 style="margin: 0; font-family: 'Rajdhani'; font-size: 1.875rem; line-height: 1;">ECON_SYNC</h1>
+            </div>
+            <div class="esc-btn" onclick="nav('home')">[esc X]</div>
+        </div>
+    </div>
+
+    <main style="padding: 20px;">
+        <div style="display: grid; grid-template-columns: 1fr 1fr; gap: 15px; margin-bottom: 25px;">
+            <div style="background: rgba(0,212,255,0.05); border: 1px solid #00d4ff33; padding: 15px; border-radius: 4px;">
+                <div class="label" style="font-size: 10px; color: #00d4ff;">MONTHLY_OUT</div>
+                <div id="finance-total-out" style="font-size: 1.5rem; color: #fff;">0.00 €</div>
+            </div>
+            <div style="background: rgba(255,255,255,0.05); border: 1px solid #333; padding: 15px; border-radius: 4px;">
+                <div class="label" style="font-size: 10px; color: var(--dim);">ESTIMATED_CASH</div>
+                <div id="finance-cash-bal" style="font-size: 1.5rem; color: #fff;">-- €</div>
+            </div>
+        </div>
+
+        <div style="margin-bottom: 10px; font-size: 10px; letter-spacing: 2px; color: var(--dim);">RECENT_TRANSACTIONS</div>
+        <div id="finance-log" style="font-family: 'JetBrains Mono'; font-size: 12px; border-left: 1px solid #222; padding-left: 15px;">
+            <div style="color: #444; font-style: italic;">AWAITING_DATA_STREAM...</div>
+        </div>
+    </main>
+</div>
+
 
   <div id="modal-backdrop" onclick="saveAndClose()"></div>
 
