--- a/index.html
+++ b/index.html
@@ -222,6 +222,21 @@
         </div>
     </div>
     <main style="padding: 20px;">
+
+<div id="ai-advice-panel" class="neural-panel">
+    <div class="panel-header">
+        <span class="status-dot"></span>
+        <span class="panel-title">NEURAL_ADVICE_v3</span>
+    </div>
+    <p id="ai-advice-text">In attesa di dati... non aver paura, non mordo (quasi mai).</p>
+</div>
+
+<div class="terminal-input-wrapper">
+    <span class="terminal-prefix">></span>
+    <input type="text" id="finance-input" placeholder="Esempio: -20 pizza con amici">
+    <button onclick="handleFinanceSubmit()">INVIO</button>
+</div>
+
         <div style="display: grid; grid-template-columns: 1fr 1fr; gap: 15px; margin-bottom: 25px;">
             <div style="background: rgba(0,212,255,0.05); border: 1px solid #00d4ff33; padding: 15px; border-radius: 4px;">
                 <div class="label" style="font-size: 10px; color: #00d4ff;">MONTHLY_OUT</div>
