--- a/index.html
+++ b/index.html
@@ -82,21 +82,14 @@
         <div class="value" id="widget-tasks">NO EVENTS</div>
       </div>
 
-      <div class="widget finance-widget" onclick="nav('finance')" style="grid-column: span 2; border-color: #00d4ff;">
-        <div style="display: flex; justify-content: space-between; align-items: center; width: 100%;">
-          <div style="display: flex; align-items: center; gap: 15px;">
-            <i data-lucide="wallet" style="color: #00d4ff;"></i>
-            <div style="text-align: left;">
-              <div class="label" style="color: #00d4ff;">ECON_SYNC</div>
-              <div class="value"><span id="widget-spent">0.00</span> € <span style="font-size: 10px; color: var(--dim);">SPENT_MONTH</span></div>
+        <div class="widget finance-widget" onclick="nav('finance')" style="grid-column: span 2;">
+            <i data-lucide="wallet"></i>
+            <div class="label">ECON_SYNC</div>
+            <div class="value">
+                <span id="widget-spent">0.00</span> € 
+                <span style="font-size: 10px; opacity: 0.4; margin-left: 5px;">SPENT_MONTH</span>
             </div>
-          </div>
-          <div style="text-align: right;">
-            <div class="label" style="opacity: 0.6;">CASH_HAND</div>
-            <div style="color: #fff; font-family: 'JetBrains Mono'; font-size: 1.2rem;"><span id="widget-cash">--</span> €</div>
-          </div>
         </div>
-      </div>
     </div>
   </div>
 
