--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
                 <span class="blink-dot" style="background-color: #00d4ff;"></span>
                 <span style="font-size: 10px; letter-spacing: 2px; color: #00d4ff; font-weight: 700;">ECON_SYNC // ACTIVE</span>
             </div>
-            <div style="display: flex; align-items: center; gap: 12px; justify-content: flex-end;">
+            <div style="align-items: center; gap: 12px; justify-content: flex-end;">
                 <i data-lucide="wallet" style="color: var(--accent); width: 28px; height: 28px;"></i>
                 <h1 style="margin: 0; font-family: 'Rajdhani'; font-size: 1.875rem; color: #fff;">CREDITS</h1>
             </div>
